--- a/LibraryUI/_Imports.razor
+++ b/LibraryUI/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using LibraryUI
-@using LibraryUI.Layout
+@using LibraryApp.UI
+@using LibraryApp.UI.Layout
+
