fixing the pages

--- a/LibraryApp.UI/Pages/BookDetails.razor
+++ b/LibraryApp.UI/Pages/BookDetails.razor
@@ -1,4 +1,4 @@
-﻿@page "/books/{InventoryNumber:guid}"
+﻿@page "/books/{BookId:guid}"
 @using LibraryApp.Shared
 @using LibraryApp.UI.Components
 @using LibraryApp.UI.Services
