--- a/LibraryApp.UI/Pages/ReaderDetails.razor
+++ b/LibraryApp.UI/Pages/ReaderDetails.razor
@@ -1,4 +1,4 @@
-﻿@page "/person/{id:guid}"
+﻿@page "/readers/{Id:guid}"
 @using LibraryApp.Shared
 @using LibraryApp.UI.Components
 @using LibraryApp.UI.Services
