--- a/LibraryApp.UI/Pages/BooksList.razor
+++ b/LibraryApp.UI/Pages/BooksList.razor
@@ -18,6 +18,8 @@ else
                 <th>Author</th>
                 <th>Punlisher</th>
                 <th>Publication Year</th>
+                <th>Details</th>
+                
             </tr>
         </thead>
         <tbody>
@@ -30,6 +32,7 @@ else
                     <td>@book.Publisher</td>
                     <td>@book.PublicationYear</td>
                     <td><a href="/books/@book.InventoryNumber" class="btn btn-primary">Details</a></td>
+                    
                 </tr>
             }
         </tbody>
