--- a/LibraryApp.UI/Layout/NavMenu.razor
+++ b/LibraryApp.UI/Layout/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add Book
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="loanings/add">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add Loaning
+            </NavLink>
+        </div>
     </nav>
 </div>
 
